DDE_UAT/latest/files/home/ec2-user/deployment_artifacts/dde-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dde-depl
  labels:
    app: dde
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dde
  template:
    metadata:
      labels:
        app: dde
      annotations:
        version: "1.5.0-704"
    spec:
      containers:
        - name: dde
          image: 835860129811.dkr.ecr.af-south-1.amazonaws.com/dev-dde:dde
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dde-serv
spec:
  selector:
    app: dde
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
