DDE_UAT/latest/files/home/ec2-user/deployment_artifacts/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "ddedev.vodacom.co.za"
      secretName: ddedev-vodacom-tls
  rules:
    - host: "ddedev.vodacom.co.za"
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: dde-serv
                port:
                  number: 80
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: client-serv
                port:
                  number: 80
